# openclaw-long-task-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  compass_artifact_wf_73de022a_5533_4678_8e6e_921ff7969c60_text_markdown.md  deep-research-report.md  gap-analysis-report.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-format.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: cron-reference.md  heartbeat-reference.md  rfc-auto-fetch-issues.md  security-reference.md
docs/wiki/: README.md  ci-quality-gates.md  issue-classification.md  loop-job-configuration.md
schemas/: task-state-v2.schema.json
src/openclaw_ltk/: __init__.py  cli.py  clock.py  config.py  cron.py  diagnostics.py  errors.py  github.py  logging.py  memory.py  migration.py  notifications.py  openclaw_cli.py  openclaw_config.py  (+5 more)
templates/: agents-directive.md.example  exec-approvals.json.example  openclaw.json.example
tests/: conftest.py  fake_openclaw.py  test_advance_cmd.py  test_close.py  test_config.py  test_contracts.py  test_cron.py  test_diagnostics.py  test_doctor.py  test_fake_openclaw.py  test_generators.py  test_github.py  test_heartbeat_cmd.py  test_init.py  test_lock.py  test_logs_cmd.py  test_memory.py  test_memory_cmd.py  test_migrate_cmd.py  test_migration.py  test_notify_cmd.py  test_openclaw_config.py  test_phases.py  test_pointer.py  test_policies.py  test_preflight.py  test_report.py  test_resume.py  test_sanitize.py  test_schema.py  test_state.py  test_status_cmd.py  test_watchdog_cmd.py  test_webhooks_cmd.py
(+34 files in other folders)
