[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-long-task-kit"
version = "0.1.0"
description = "Control-plane toolkit for OpenClaw long-running tasks"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
]

[project.scripts]
ltk = "openclaw_ltk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_ltk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["openclaw_ltk"]
mypy_path = "src"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pip-audit>=2.7",
]
